deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nabiz
  labels:
    app.kubernetes.io/name: nabiz
